--- a/.azdo/pipelines/templates/cowsay-template.yml
+++ b/.azdo/pipelines/templates/cowsay-template.yml
@@ -1,14 +1,20 @@
 steps:
-- bash: |
+- script: |
+    echo Skipping Docker steps
+    echo   Agent.OS is $(Agent.OS)
+  displayName: 'Docker Check'
+  condition: ne(variables['Agent.OS'], 'Linux')
+
+- script: |
     docker pull vanessa/cowsay
   displayName: 'Docker pull image'
 
-- bash: | 
+- script: | 
     docker run vanessa/cowsay run cowthink
   displayName: 'Docker run image with cowthink'
   enabled: true
 
-- bash: | 
+- script: | 
     docker run vanessa/cowsay run animal vader-koala
   displayName: 'Docker run image with animal'
   enabled: true
