--- a/.azdo/pipelines/build.pipeline.yml
+++ b/.azdo/pipelines/build.pipeline.yml
@@ -3,8 +3,9 @@ name: lab5-build-pipeline
 trigger: none
 
 pool:
-  vmImage: 'ubuntu-22.04'
-
+  #vmImage: 'ubuntu-22.04'
+  name: desktop   # using custom build agent - or - vmImage: 'ubuntu-latest'  # if using Microsoft-hosted agent
+  
 steps:
 # Copy files from a source folder to a target folder using patterns matching file paths (not folder paths)
 - task: CopyFiles@2
